jdk integer method test and explanation